Fix disable button enable in add,choose,local daemon,UI alignment issues at  150% in add daemon and dropdown issue  choose daemon  in wallet

--- a/stylesheets/_bchat.scss
+++ b/stylesheets/_bchat.scss
@@ -1506,7 +1506,7 @@ label {
         // height: 45px;
         height: 60px;
         display: flex;
-        justify-content: space-between;
+        // justify-content: space-between;
         align-items: center;
         border-radius: 10px;
         // margin-top: 20px;
@@ -1537,6 +1537,7 @@ label {
           font-family: 'poppin-semibold';
           font-size: 18px;
           color: #a2a2af;
+          margin-left: 5px;
         }
       }
     }
@@ -1661,6 +1662,7 @@ label {
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
+        margin-right: 10px;
         /* cursor: pointer; */
         // margin-right: 13px;
       }
@@ -2086,6 +2088,12 @@ label {
           // max-height: 140px;
           max-height: 171px;
           overflow: auto;
+
+          &-items {
+            margin-bottom: 5px;
+            display: flex;
+            align-items: baseline;
+          }
         }
 
         &-sendDropDown {
@@ -2183,14 +2191,21 @@ label {
           }
           &-btnBox {
             .bchat-button.default.primary,
-            .bchat-button.default.green {
+            .bchat-button.default.green,
+            .bchat-button.default.disable {
               width: 125px;
               height: 45px;
             }
             .bchat-button.default.primary {
               background-color: #2879fb;
-              margin-right: 30px;
+              // margin-right: 30px;
               color: white;
+            }
+            .bchat-button.default.disable {
+              background-color: var(--color-disableBtn);
+              // margin-right: 30px;
+              color: var(--color-disableTxt);
+              cursor: not-allowed;
             }
           }
         }
